5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1828_3185.log
== TEST (2019-06-12 15:48:08) 
-- CODE:
from numpy import*
s= input("palavra: ")
for i in range(len(s)):
	if(s[i]=-1):
		print(s)
	
-- ERROR:
File "XXXX", line 4
    if(s[i]=-1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:48:12) 
-- CODE:
from numpy import*
s= input("palavra: ")
for i in range(len(s)):
	if(s[i]=-1):
		print(i)
	
-- ERROR:
File "XXXX", line 4
    if(s[i]=-1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:49:37) 
-- CODE:
from numpy import*
n= input("palavra: ")
s=""
for i in range(len(n)):
	if(n[i]=-1):
		print(s)
		
	
-- ERROR:
File "XXXX", line 5
    if(n[i]=-1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:49:55) 
-- CODE:
from numpy import*
n= input("palavra: ")
s=""
for i in range(len(n)):
	if(n[i]=-1):
		s = s +1
print(s)




		
	
-- ERROR:
File "XXXX", line 5
    if(n[i]=-1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
